# oslo.cache

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  dev-requirements.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  installation.rst  opts.rst  usage.rst
doc/source/configuration/: index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst  usage.rst
oslo.cache/locale/: oslo.cache-log-error.pot  oslo.cache-log-info.pot  oslo.cache-log-warning.pot  oslo.cache.pot
oslo_cache/: __init__.py  _bmemcache_pool.py  _i18n.py  _memcache_pool.py  _opts.py  core.py  exception.py  testing.py  version.py
oslo_cache/backends/: dictionary.py  etcd3gw.py  memcache_pool.py  mongo.py  noop.py
oslo_cache/locale/: oslo_cache.pot
oslo_cache/locale/de/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/en_GB/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/es/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/fr/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/it/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/ko_KR/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/pt_BR/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/ru/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/tr_TR/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/zh_CN/LC_MESSAGES/: oslo_cache.po
oslo_cache/locale/zh_TW/LC_MESSAGES/: oslo_cache.po
oslo_cache/tests/: __init__.py  test_cache.py  test_cache_backend_mongo.py  test_connection_pool.py  test_dict_backend.py
oslo_cache/tests/functional/: test_base.py  test_cache_backend.py  test_cache_backend_etcd3gw.py
oslo_cache/tests/functional/dogpile_cache_bmemcached/: test_cache_backend.py
oslo_cache/tests/functional/dogpile_cache_pymemcache/: test_cache_backend.py
oslo_cache/tests/functional/dogpile_cache_redis/: test_cache_backend.py
oslo_cache/tests/functional/dogpile_cache_redis_sentinel/: test_cache_backend.py
oslo_cache/tests/functional/etcd3gw/: test_cache_backend.py
oslo_cache/tests/functional/memcache_pool/: test_cache_backend.py
oslo_cache/tests/unit/: test_cache_backend_mongo.py  test_cache_basics.py  test_connection_pool.py  test_dict_backend.py
playbooks/tests/functional/: Debian.yaml  RedHat.yaml  pre.yml
releasenotes/notes/: add-dogpile.cache.pymemcache-backend-627d31a76013f8e1.yaml  bug-1743036-320ed918d5fb4325.yaml  bug-1819957-ccff6b0ec9d1cbf2.yaml  bug-1888394-5a53e7a9cb25375b.yaml  bug-1991250-23bc3463273e5a91.yaml  deprecate-enforce_fips_mode-ccf5772fb9462c05.yaml  deprecate-key-generator-835ee373d3bf6851.yaml  deprecate-memcache_pool-backend-98f1267e4e912004.yaml  deprecate-version-module-93279ea5f2cd6bac.yaml  drop-python-2-7-73d3113c69d724d6.yaml  enable-sasl-protocol-46d11530b87e7832.yaml  enable_backend_expiration-252108d4f7bf3427.yaml  enforce_fips_mode-c3296a0cc1fb7ad9.yaml  etcd3gw_driver-8ba4511ae9553a91.yaml  fix-hashclient-opt-names-47b091d1e7148696.yaml  fix-ignored-hashclient-options-9b6bb1871294a9af.yaml  fix-memcache-pool-backend-b9e6aaab08075d68.yaml  general-opt-names-9ee723c0a9acac16.yaml  lower_socket_timeout-ff5680a6be23bdb2.yaml  memcache_socket_timeout-a7db772f052c107e.yaml  pymemcache_hashclient_configure-f6f48c5ca38bce47.yaml  pymemcache_retry_mecchanisms-fa969d1ac6f64096.yaml  pymemcache_socket_keepalive-f91c69770961e2b6.yaml  redis-backend-opts-27915f2b672512c9.yaml  redis-db-adb38e980f171dc9.yaml  redis-sentinel-18ba4a0da83dabc7.yaml  redis-socket-keepalive-4c6cfde0be827282.yaml  redis-ssl-ca14b4b99c2e5a84.yaml  redis-tls_allowed_ciphers-0ac7c50d83da1000.yaml  remove-enforce_fips_mode-a998b6870ab4c245.yaml  remove-mongodb-backend-f539ec21d2a32848.yaml  switch-from-python-memcached-to-pymemcache-566e70b224f92b73.yaml  use-bmemcache-for-memcache-pool-if-tls-enabled-733d98c265a3a9a1.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ko_KR/LC_MESSAGES/: releasenotes.po
