[metadata]
name = oslo.cache
summary = Cache storage for OpenStack projects.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/oslo.cache
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_cache

[entry_points]
oslo.config.opts =
    oslo.cache = oslo_cache._opts:list_opts

dogpile.cache =
    oslo_cache.mongo = oslo_cache.backends.mongo:MongoCacheBackend
    oslo_cache.memcache_pool = oslo_cache.backends.memcache_pool:PooledMemcachedBackend
    oslo_cache.dict = oslo_cache.backends.dictionary:DictCacheBackend
    oslo_cache.etcd3gw = oslo_cache.backends.etcd3gw:Etcd3gwCacheBackend

[extras]
dogpile =
  python-memcached>=1.56 # PSF
mongo =
  pymongo!=3.1,>=3.0.2 # Apache-2.0
etcd3gw =
  etcd3gw>=0.1.0 # Apache-2.0

[pbr]
warnerrors = true
autodoc_tree_index_modules = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_cache/locale
domain = oslo_cache

[update_catalog]
domain = oslo_cache
output_dir = oslo_cache/locale
input_file = oslo_cache/locale/oslo_cache.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_cache/locale/oslo_cache.pot

[wheel]
universal = true
